quick fix to make avoid navbar collapsing on mobile

--- a/web/app/themes/xrnl/assets/sass/header.scss
+++ b/web/app/themes/xrnl/assets/sass/header.scss
@@ -1,4 +1,3 @@
-
 .navbar {
   padding-bottom: 0;
 
@@ -10,6 +9,10 @@
     }
   }
 
+  a.navbar-brand {
+    padding: 0;
+    margin: 0;
+  }
 
   a.navbar-brand > img {
     @include media-breakpoint-down(sm) {
@@ -66,4 +69,9 @@
   .navbar-expand-xl .show-xxs  {
     display: none;
   }
+}
+
+.show-xxs {
+  // quick hack to force that logo to the left
+  margin: 0 -15px;
 }
